k8s/minikube/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-demo
  namespace: ns-discovery
spec:
  type: NodePort # expose service
  ports:
  - name: rocketapi
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30009
  selector: #in order to connect to discovery backend
    k8s-app: discovery-demo # other labels can be used => name: discovery-demo (app: discovery-demo)
  # other services may use dns to access discovery service via <service-name>.<namespace>.svc.<cluster.local>
